--- a/package.json
+++ b/package.json
@@ -3,40 +3,43 @@
   "version": "1.0.0",
   "description": "Beetfit pdf - templates",
   "scripts": {
-    "start": "concurrently 'yarn optimize' 'yarn webp' 'yarn watch' 'yarn dev'",
-    "dev": "parcel ./src/*.html --no-cache",
-    "prod": "NODE_ENV=production node ./tools/image-optimizer.js && node ./tools/webp-converter.js && parcel build ./src/index.html  --no-cache --no-minify --no-source-maps --public-url ./",
+    "start": "concurrently 'yarn clean' 'yarn optimize' 'yarn watch' 'yarn dev'",
+    "dev": "parcel ./src/*.html --public-url '/'",
+    "prod": "NODE_ENV=production node ./tools/image-optimizer.js && parcel build ./src/*.html  --no-cache --no-minify --no-source-maps --public-url '/'",
     "watch": "node ./tools/watcher.js",
-    "webp": "node ./tools/webp-converter.js",
-    "optimize": "node ./tools/image-optimizer.js"
+    "optimize": "node ./tools/image-optimizer.js",
+    "clean": "rm -rf dist .cache"
   },
   "repository": "https://github.com/danekkalivoda/beetfit-pdf.git",
   "author": "Danek Kalivoda <danek.kalivoda@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@parcel/transformer-css": "^2.0.0-alpha.3",
     "@parcel/transformer-postcss": "^2.0.0-alpha.3",
-    "autoprefixer": "^9.7.5",
-    "chokidar": "^3.4.0",
-    "concurrently": "^5.2.0",
+    "autoprefixer": "^9.8.6",
+    "chokidar": "^3.4.2",
+    "concurrently": "^5.3.0",
     "fs": "^0.0.1-security",
     "imagemin": "^7.0.1",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngquant": "^9.0.0",
     "imagemin-webp": "^6.0.0",
-    "parcel": "^2.0.0-beta.1",
-    "postcss": "^7.0.27",
-    "postcss-nested": "^4.2.1",
+    "parcel-bundler": "^1.12.4",
+    "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.1",
+    "postcss-nested": "^4.2.3",
     "posthtml-each": "^1.0.1",
-    "posthtml-expressions": "^1.4.3",
+    "posthtml-expressions": "^1.4.5",
     "posthtml-include": "^1.4.3",
-    "posthtml-inline-svg": "^0.0.3",
-    "posthtml-modules": "^0.6.1",
-    "posthtml-noopener": "^1.0.3",
+    "posthtml-inline-svg": "^0.2.0",
+    "posthtml-load-config": "^1.0.0",
+    "posthtml-modules": "^0.6.2",
+    "posthtml-noopener": "^1.0.5",
     "posthtml-obfuscate": "^0.1.5",
     "posthtml-webp": "https://github.com/pugson/posthtml-webp",
-    "tailwindcss": "^1.4.6",
-    "typescript": "^3.8.3"
+    "tailwindcss": "^1.7.6",
+    "tinygesture": "^1.1.4",
+    "typescript": "^3.9.7"
   }
 }
